--- a/practicaFlex3/index.html
+++ b/practicaFlex3/index.html
@@ -23,34 +23,49 @@
         <h2 class="titulo">Con Iconos</h2>
         <nav>
             <ul class="listMenu conIconos">
-                <li class="btmNAV btmIcon">
+                <li class="liNAV liICON"><a class="btmNAV btmIcon">
                     <i class="fa-solid fa-house icono"></i>
                     <div class="flexP">
                         <p class="tituloMenu">Inicio</p>
                         <p class="descripcionMenu">Página Principal</p>
                     </div>
-                </li>
-                <li class="btmNAV btmIcon">
+                </a></li>
+                <li class="liNAV liICON"><a class="btmNAV btmIcon">
                     <i class="fa-solid fa-envelope icono"></i>
                     <div class="flexP">
                         <p class="tituloMenu">Contactanos</p>
                         <p class="descripcionMenu">Escribenos aqui</p>
                     </div>
-                </li>
-                <li class="btmNAV btmIcon">
+                </a></li>
+                <li class="liNAV liICON"><a class="btmNAV btmIcon">
                     <i class="fa-solid fa-dollar-sign icono"></i>
                     <div class="flexP">
                         <p class="tituloMenu">Tienda Virtual</p>
                         <p class="descripcionMenu">Adquiere nuestros artículos</p>
                     </div>
-                </li>
-                <li class="btmNAV btmIcon">
+                </a></li>
+                <li class="liNAV liICON"><a class="btmNAV btmIcon">
                     <i class="fa-solid fa-circle-question icono"></i>
                     <div class="flexP">
                         <p class="tituloMenu">Asistencia</p>
                         <p class="descripcionMenu">¿Necesitas Ayuda?</p>
                     </div>
+                </a></li>
+            </ul>
+        </nav>
+        <h2 class="titulo">Dropdown Menu</h2>
+        <nav>
+            <ul class="listMenu">
+                <li class="liNAV"><a class="btmNAV">Inicio</a></li>
+                <li class="liNAV liNosPadre"><a class="btmNAV btmNosPadre">Nosotros</a>
+                        <ul class="listNosotros ulPadreNosotros">
+                            <li class="liNosotros"><a class="btmNAV btmNosotros">Misión</a></li>
+                            <li class="liNosotros"><a class="btmNAV btmNosotros">Visión</a></li>
+                            <li class="liNosotros"><a class="btmNAV btmNosotros">Valores</a></li>
+                        </ul>
                 </li>
+                <li class="liNAV"><a class="btmNAV">Tienda Virtual</a></li>
+                <li class="liNAV"><a class="btmNAV">Asistencia</a></li>
             </ul>
         </nav>
     </div>
