Guardar NAV DROPDOWN en movil

--- a/practicaFlex3/index.html
+++ b/practicaFlex3/index.html
@@ -56,16 +56,16 @@
         <h2 class="titulo">Dropdown Menu</h2>
         <nav>
             <ul class="listMenu">
-                <li class="liNAV"><a class="btmNAV">Inicio</a></li>
-                <li class="liNAV liNosPadre"><a class="btmNAV btmNosPadre">Nosotros</a>
+                <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Inicio</a></li>
+                <li class="liNAV liDropDown liNosPadre"><a class="btmNAV btmDropDown btmNosPadre">Nosotros</a>
                         <ul class="listNosotros ulPadreNosotros">
                             <li class="liNosotros"><a class="btmNAV btmNosotros">Misión</a></li>
                             <li class="liNosotros"><a class="btmNAV btmNosotros">Visión</a></li>
                             <li class="liNosotros"><a class="btmNAV btmNosotros">Valores</a></li>
                         </ul>
                 </li>
-                <li class="liNAV"><a class="btmNAV">Tienda Virtual</a></li>
-                <li class="liNAV"><a class="btmNAV">Asistencia</a></li>
+                <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Tienda Virtual</a></li>
+                <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Asistencia</a></li>
             </ul>
         </nav>
     </div>
