--- a/practicaFlex3/index.html
+++ b/practicaFlex3/index.html
@@ -58,7 +58,7 @@
             <ul class="listMenu">
                 <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Inicio</a></li>
                 <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Nosotros</a>
-                        <ul class="listNosotros ulPadreSublista">
+                        <ul class="ulPadreSublista">
                             <li class="liSublista"><a class="btmNAV btmSublista">Misión</a></li>
                             <li class="liSublista"><a class="btmNAV btmSublista">Visión</a></li>
                             <li class="liSublista"><a class="btmNAV btmSublista">Valores</a></li>
@@ -80,7 +80,7 @@
         </nav>
         <h2 class="titulo">Dropdown Menu con Redes Sociales</h2>
         <nav class="DropDownANDIcon">
-            <ul class="listMenu ulDropDown">
+            <ul class="listMenu">
                 <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Inicio</a></li>
                 <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Nosotros</a>
                         <ul class="ulPadreSublista">
@@ -99,11 +99,11 @@
                 <li class="liNAV liDropDown"><a class="btmNAV btmDropDown">Asistencia</a></li>
             </ul>
             <ul class="listMenu ulRedes">
-                <li class="liNAV liRedes"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-facebook-f"></i></a></li>
-                <li class="liNAV liRedes"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-square-youtube"></i></a></li>
-                <li class="liNAV liRedes"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-instagram"></i></a></li>
-                <li class="liNAV liRedes"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-pinterest-p"></i></a></li>
-                <li class="liNAV liRedes"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-twitter"></i></a></li>
+                <li class="liNAV liRedes liRedes2"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-facebook-f"></i></a></li>
+                <li class="liNAV liRedes liRedes2"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-square-youtube"></i></a></li>
+                <li class="liNAV liRedes liRedes2"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-instagram"></i></a></li>
+                <li class="liNAV liRedes liRedes2"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-pinterest-p"></i></a></li>
+                <li class="liNAV liRedes liRedes2"><a class="btmNAV btmRedes"><i class="iconRedes fa-brands fa-twitter"></i></a></li>
             </ul>
         </nav>
     </div>
