--- a/tarea4/index.html
+++ b/tarea4/index.html
@@ -12,47 +12,48 @@
 
     <main>
         <article>
-            <img src="./img/sec1.jpg">
+            <img src="./img/01.jpg">
             <h2>TIPS PARA VIAJAR CON PCO PRESUPUESTO</h2>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
-            <img src="./img/sec2.jpg">
+            <img src="./img/02.jpg">
             <h2>TODO LO NECESARIO PARA VIAJAR</h2>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
-            <img src="./img/sec3.jpg">
+            <img src="./img/03jpg">
             <h2>EL EQUIPO NECESARIO PARA TOMAR LAS MEJORES FOTOGRAFÍAS</h2>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
-            <img src="./img/sec1.jpg">
+            <img src="./img/04.jpg">
             <h2>TIPS PARA VIAJAR CON PCO PRESUPUESTO</h2>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
-            <img src="./img/sec2.jpg">
+            <img src="./img/05.jpg">
             <h2>TODO LO NECESARIO PARA VIAJAR</h2>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
-            <img src="./img/sec3.jpg">
+            <img src="./img/06.jpg">
             <h2>EL EQUIPO NECESARIO PARA TOMAR LAS MEJORES FOTOGRAFÍAS</h2>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
     </main>
+
 </body>
 </html>
