--- a/tarea4/index.html
+++ b/tarea4/index.html
@@ -8,52 +8,57 @@
 </head>
 <body>
 
+    <div class="contenedor">
+
     <h1>Úlltimas Entradas</h1>
 
     <main>
         <article>
             <img src="./img/01.jpg">
-            <h2>TIPS PARA VIAJAR CON PCO PRESUPUESTO</h2>
+            <h3>TIPS PARA VIAJAR CON PCO PRESUPUESTO</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
             <img src="./img/02.jpg">
-            <h2>TODO LO NECESARIO PARA VIAJAR</h2>
+            <h3>TODO LO NECESARIO PARA VIAJAR</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
-            <img src="./img/03jpg">
-            <h2>EL EQUIPO NECESARIO PARA TOMAR LAS MEJORES FOTOGRAFÍAS</h2>
+            <img src="./img/03.jpg">
+            <h3>EL EQUIPO NECESARIO PARA TOMAR LAS MEJORES FOTOGRAFÍAS</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
             <img src="./img/04.jpg">
-            <h2>TIPS PARA VIAJAR CON PCO PRESUPUESTO</h2>
+            <h3>TIPS PARA VIAJAR CON PCO PRESUPUESTO</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
             <img src="./img/05.jpg">
-            <h2>TODO LO NECESARIO PARA VIAJAR</h2>
+            <h3>TODO LO NECESARIO PARA VIAJAR</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
         <article>
             <img src="./img/06.jpg">
-            <h2>EL EQUIPO NECESARIO PARA TOMAR LAS MEJORES FOTOGRAFÍAS</h2>
+            <h3>EL EQUIPO NECESARIO PARA TOMAR LAS MEJORES FOTOGRAFÍAS</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
         </article>
     </main>
+
+    </div>
+    
 
 </body>
 </html>
