--- a/tarea5/index.html
+++ b/tarea5/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea 5</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 <body>
     <header>
-        <div class="contenedor">
-            <img src="img/logo.png">
-            <img src="img/menu.png">
-        </div>
-        <section class="fondo-contenedor">
-            <div class="contenedor">
+        <nav class="contenedor">
+            <img src="img/logo.jpg">
+            <img src="img/cart.png">
+        </nav>
+        <section class="fondo-contenedor-buscador">
+            <div class="contenedor cont-column">
                 <h1>Aprende algo nuevo</h1>
                 <p>Todos los cursos a $15</p>
                 <form>
@@ -22,25 +22,25 @@
                 </form>          
             </div>
         </section>
-        <section class="fondo-contenedor">
+        <section class="fondo-contenedor-info">
             <div class="contenedor">
                 <div class="info">
                     <img src="img/icono1.png">
-                    <div>
+                    <div class="flexP">
                         <p>20.000 Curso en linea</p>
                         <p>Explora los temas más recientes</p>
                     </div>
                 </div>
                 <div class="info">
                     <img src="img/icono2.png">
-                    <div>
+                    <div class="flexP">
                         <p>Instructores Espertos</p>
                         <p>Aprende con distintos estilos</p>
                     </div>
                 </div>
                 <div class="info">
                     <img src="img/icono3.png">
-                    <div>
+                    <div class="flexP">
                         <p>Acceso de por vida</p>
                         <p>Aprende a tu ritmo</p>
                     </div>
