--- a/tarea4/index.html
+++ b/tarea4/index.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <img src="./img/01.jpg">
-            <h3>TIPS PARA VIAJAR CON PCO PRESUPUESTO</h3>
+            <h3>TIPS PARA VIAJAR CON POCO PRESUPUESTO</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
             <button>LEER MÁS</button>
@@ -28,11 +28,7 @@
             <button>LEER MÁS</button>
         </article>
         <article>
-<<<<<<< HEAD
-            <img src="./img/03jpg">
-=======
             <img src="./img/03.jpg">
->>>>>>> babac9edc92bb856e6d327a8afbe00939c80132b
             <h3>EL EQUIPO NECESARIO PARA TOMAR LAS MEJORES FOTOGRAFÍAS</h3>
             <p>PUBLICADO EL: <span>19 JULIO, 2018</span></p>
             <p>POR: <span>19 JULIO, 2018</span></p>
