--- a/tarea5/index.html
+++ b/tarea5/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea 5</title>
     <link rel="stylesheet" href="./dist/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -18,8 +19,8 @@
                 <p>Todos los cursos a $15</p>
                 <form>
                     <input type="text" placeholder="¿Que te gustaría Aprender?" required>
-                    <button type="submit"><img src="./img/lupa.png"></button>
-                </form>          
+                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </form>         
             </div>
         </section>
         <section class="fondo-contenedor-info">
