--- a/tarea5/index.html
+++ b/tarea5/index.html
@@ -51,138 +51,236 @@
     </header>
     <main>
         <section class="contenedor">
-            <h2>Cursos EN Linea</h1>
-            <div>
-                <img src="./img/curso1.jpg">
-                <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+            <h2>Cursos En Linea</h1>
+            <div class="cursosPadre">
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso1.jpg">
+                    <div class="curso-detalle">
+                        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso2.jpg">
-                <h4>Curso de Comida Vegetariana</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso2.jpg">
+                    <div class="curso-detalle">
+                        <h4>Curso de Comida Vegetariana</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso3.jpg">
-                <h4>Guitarra para Principiantes</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso3.jpg">
+                    <div class="curso-detalle">
+                        <h4>Guitarra para Principiantes</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso4.jpg">
-                <h4>Huerto en tu casa</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso4.jpg" alt="Huerto en tu casa">
+                    <div class="curso-detalle">
+                        <h4>Huerto en tu casa</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso5.jpg">
-                <h4>Decoración con productos de tu hogar</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso5.jpg">
+                    <div class="curso-detalle">
+                        <h4>Decoración con productos de tu hogar</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso1.jpg">
-                <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso1.jpg">
+                    <div class="curso-detalle">
+                        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso2.jpg">
-                <h4>Curso de Comida Vegetariana</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso2.jpg">
+                    <div class="curso-detalle">
+                        <h4>Curso de Comida Vegetariana</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso3.jpg">
-                <h4>Guitarra para Principiantes</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso3.jpg">
+                    <div class="curso-detalle">
+                        <h4>Guitarra para Principiantes</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso4.jpg">
-                <h4>Huerto en tu casa</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
-                </div>>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso5.jpg">
-                <h4>Decoración con productos de tu hogar</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso4.jpg">
+                    <div class="curso-detalle">
+                        <h4>Huerto en tu casa</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso1.jpg">
-                <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso5.jpg">
+                    <div class="curso-detalle">
+                        <h4>Decoración con productos de tu hogar</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
-            </div>
-            <div>
-                <img src="./img/curso2.jpg">
-                <h4>Curso de Comida Vegetariana</h4>
-                <p>Juan Pedro</p>
-                <img src="./img/estrellas.png">
-                <div class="precios">
-                    <p>$200</p>
-                    <p class="descuento">$15</p>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso1.jpg">
+                    <div class="curso-detalle">
+                        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
                 </div>
-                <button>Agregar Al Carrito</button>
+                <div class="curso">
+                    <img class="fotoCurso" src="./img/curso2.jpg">
+                    <div class="curso-detalle">
+                        <h4>Curso de Comida Vegetariana</h4>
+                        <p>Juan Pedro</p>
+                        <div class="estrellas">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="precios">
+                            <p>$200</p>
+                            <p class="descuento">$15</p>
+                        </div>
+                        <button>Agregar Al Carrito</button>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -203,4 +301,4 @@
         </div>
     </footer>
 </body>
-</html>
+</html></div>
