--- a/Tarea1-Grid/index.html
+++ b/Tarea1-Grid/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea 1 Grid</title>
+    <link rel="stylesheet" href="./dist/css/style.css">
 </head>
 <body>
 
-    <header>
-        <h1>Nombre del Sitio</h1>
-    </header>
+    <div class="contenedor">
 
-    <main>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quasi, maiores id dignissimos velit saepe magni, nobis animi facilis omnis cumque vero. Quo doloremque iusto, ipsa suscipit eveniet incidunt reiciendis!</p>
-    </main>
-    
-    <asaid>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores neque, minima saepe sed, eligendi eos vero illum veritatis optio, ab sunt quisquam autem tenetur explicabo sapiente asperiores praesentium modi. Natus!</p>
-    </asaid>
+        <header>
+            <h1>Nombre del Sitio</h1>
+        </header>
 
-    <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    </footer>
+        <main>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quasi, maiores id dignissimos velit saepe magni, nobis animi facilis omnis cumque vero. Quo doloremque iusto, ipsa suscipit eveniet incidunt reiciendis!</p>
+        </main>
+        
+        <asaid>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores neque, minima saepe sed, eligendi eos vero illum veritatis optio, ab sunt quisquam autem tenetur explicabo sapiente asperiores praesentium modi. Natus!</p>
+        </asaid>
+
+        <footer>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </footer>
+
+    </div>
 
 </body>
 </html>
