--- a/Tarea2-Grid/index.html
+++ b/Tarea2-Grid/index.html
@@ -6,6 +6,44 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <div class="contenedor">
+            <div class="logo">
+                <img src="./img/logo.png" alt="Receta Fácil">
+            </div>
+            <nav class="menu">
+                <a href="#">RECETAS</a>
+                <a href="#">PRODUCTOS</a>
+                <a href="#">RECOMENDACIONES</a>
+                <a href="#">VIDEOS</a>
+            </nav>
+        </div>
+
+        <div class="contenedor">
+            <img src="./img/pizza.png" alt="Pizza">
+        </div>
+    </header>
+
+    <main class="contenedor">
+
+        <ul class="chil-requisitos">
+            <li>30 Minutos</li>
+            <li>4 Personas</li>
+            <li>$200</li>
+        </ul>
+
+        <img class="chil-img" src="./img/pizza1.png" alt="Pizza 1">
+
+        <img class="chil-img" src="./img/pizza2.png" alt="Pizza 1">
+
+        <p class="chil-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem minus, officiis aperiam ullam iusto sint illo, iure pariatur dolores repudiandae eligendi perspiciatis voluptas cum nesciunt a, animi voluptatum mollitia qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae deleniti laborum, reiciendis fugit consectetur sapiente mollitia dignissimos, pariatur error vel hic iste cupiditate id similique, cum ad. In, explicabo veritatis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique natus vel quis, magnam, sed possimus assumenda maxime doloribus laudantium saepe rem quaerat. Cumque nemo repellat inventore est non voluptatem repudiandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore repellat veniam fuga corrupti voluptates delectus. Facilis at ipsam ad pariatur amet, recusandae architecto repudiandae expedita quis. Nostrum cumque doloribus voluptates! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis optio illo mollitia, voluptatum, aut reiciendis tempora perspiciatis officia quia ab impedit architecto natus debitis inventore soluta aliquam dolorem dolorum deserunt.</p>
+
+    </main>
     
+    
+
+
+
 </body>
 </html>
