avanzet area 2 grid

--- a/Tarea2-Grid/index.html
+++ b/Tarea2-Grid/index.html
@@ -23,13 +23,11 @@
             </ul>
         </nav>
 
-        <div class="contenedor">
-            <img class="pizzaImg" src="./img/platillo.jpg" alt="Pizza">
-        </div>
-
     </header>
 
     <main class="contenedor">
+
+        <img class="pizzaImg" src="./img/platillo.jpg" alt="Pizza">
 
         <ul class="chil-requisitos">
             <li>30 Minutos</li>
@@ -37,9 +35,9 @@
             <li>$200</li>
         </ul>
 
-        <img class="chil-img" src="./img/mini1.jpg" alt="Pizza 1">
+        <img class="chil-img1" src="./img/mini1.jpg" alt="Pizza 1">
 
-        <img class="chil-img" src="./img/mini2.jpg" alt="Pizza 1">
+        <img class="chil-img2" src="./img/mini2.jpg" alt="Pizza 1">
 
         <h1>La mejor receta para hacer pizza en tu hogar</h1>
 
@@ -87,7 +85,7 @@
             </ul>
         </div>
 
-        <p>2028 Receta Facil</p>
+        <p class="finaFooter">2028 Receta Facil</p>
 
     </footer>
 
