--- a/practica 3 grid/index.html
+++ b/practica 3 grid/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BieneRaices.com</title>
+    <link rel="stylesheet" href="./dist/css/styles.css">
 </head>
 <body>
     <header>
@@ -93,6 +94,29 @@
         </div>
         <div>
             <h3>Casas a la Venta</h3>
+            <div>
+                <img src="./img/casa2.jpg" alt="Imagen Casa 2">
+                <h4>Cassa 2</h4>
+                <p>€2,000,000</p>
+            </div>
+            <div>
+                <img src="./img/casa3.jpg" alt="Imagen Casa 3">
+                <h4>Cassa 3</h4>
+                <p>€2,000,000</p>
+            </div>
+            <div>
+                <img src="./img/casa4.jpg" alt="Imagen Casa 4">
+                <h4>Cassa 4</h4>
+                <p>€2,000,000</p>
+            </div>
+            <div>
+                <img src="./img/casa5.jpg" alt="Imagen Casa 15">
+                <h4>Cassa 5</h4>
+                <p>€2,000,000</p>
+            </div>
+        </div>
+        <div>
+            <p>Derechos Reservadoss Bienes Raices 2026</p>
         </div>
 
     </footer>
