guardar 9 de Enero

--- a/practica 3 grid/index.html
+++ b/practica 3 grid/index.html
@@ -1,125 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BieneRaices.com</title>
     <link rel="stylesheet" href="./dist/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <img src="./img/logo.png" alt="BieneRaices.com Logo">
-        <nav>
-            <ul>
-                <li>Nosotros</li>
-                <li>Casas</li>
-                <li>Contactos</li>
-            </ul>
-        </nav>
+        <div class="conteiner">
+            <img src="./img/logo.png" alt="BieneRaices.com Logo">
+            <nav>
+                <ul>
+                    <li>Nosotros</li>
+                    <li>Casas</li>
+                    <li>Contactos</li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        
-        <img src="./img/nosotros.jpg" alt="Sbre Nosotros">
+        <div class="conteiner">
 
-        <h1>Sobre Nosotros</h1>
+            <section class="sec1">
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum. Placeat, beatae eos in consequatur maiores obcaecati fugit suscipit.</p>
+                <img src="./img/nosotros.jpg" alt="Sbre Nosotros">
 
-        <div class="casasVenta">
+                <div>
 
-            <article class="destacado">
-                <h2>Casa 1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum.</p>
-                <p>Precio: <span>€3,000,000</span></p>
-                <button>Mas Informacion</button>
-            </article>
+                    <h1>Sobre Nosotros</h1>
 
-            <article>
-                <h2>Casa 2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum.</p>
-                <p>Precio: <span>€3,000,000</span></p>
-                <button>Mas Informacion</button>
-            </article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore
+                        possimus,
+                        iure
+                        enim quam repellendus corrupti non error ipsum. Placeat, beatae eos in consequatur maiores
+                        obcaecati
+                        fugit
+                        suscipit.</p>
 
-            <article>
-                <h2>Casa 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum.</p>
-                <p>Precio: <span>€3,000,000</span></p>
-                <button>Mas Informacion</button>
-            </article>
+                </div>
 
-            <article>
-                <h2>Casa 4</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum.</p>
-                <p>Precio: <span>€3,000,000</span></p>
-                <button>Mas Informacion</button>
-            </article>
+            </section>
 
-            <article>
-                <h2>Casa 5</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum.</p>
-                <p>Precio: <span>€3,000,000</span></p>
-                <button>Mas Informacion</button>
-            </article>
+            <div class="casasVenta">
 
-            <article>
-                <h2>Casa 6</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore possimus, iure enim quam repellendus corrupti non error ipsum.</p>
-                <p>Precio: <span>€3,000,000</span></p>
-                <button>Mas Informacion</button>
-            </article>
+                <article class="destacado">
+                    <img src="./img/casa1.jpg" alt="Imagen Casa 1">
+                    <div class="infoCasa">
+                        <h2>Casa 1</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore
+                            possimus, iure enim quam repellendus corrupti non error ipsum.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore
+                            possimus, iure enim quam repellendus corrupti non error ipsum.</p>
+                        <p class="precio">Precio: <span>€3,000,000</span></p>
+                        <button>Mas Informacion</button>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="./img/casa2.jpg" alt="Imagen Casa 2">
+                    <div class="infoCasa">
+                        <h2>Casa 2</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore
+                            possimus, iure enim quam repellendus corrupti non error ipsum.</p>
+                        <p class="precio">Precio: <span>€3,000,000</span></p>
+                        <button>Mas Informacion</button>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="./img/casa3.jpg" alt="Imagen Casa 3">
+                    <div class="infoCasa">
+                        <h2>Casa 3</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore
+                            possimus, iure enim quam repellendus corrupti non error ipsum.</p>
+                        <p class="precio">Precio: <span>€3,000,000</span></p>
+                        <button>Mas Informacion</button>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="./img/casa4.jpg" alt="Imagen Casa 4">
+                    <div class="infoCasa">
+                        <h2>Casa 4</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore
+                            possimus, iure enim quam repellendus corrupti non error ipsum.</p>
+                        <p class="precio">Precio: <span>€3,000,000</span></p>
+                        <button>Mas Informacion</button>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="./img/casa5.jpg" alt="Imagen Casa 5">
+                    <div class="infoCasa">
+                        <h2>Casa 5</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, sapiente voluptatibus labore
+                            possimus, iure enim quam repellendus corrupti non error ipsum.</p>
+                        <p class="precio">Precio: <span>€3,000,000</span></p>
+                        <button>Mas Informacion</button>
+                    </div>
+                </article>
+            </div>
         </div>
-
     </main>
 
     <footer>
-
-        <div>
-            <h3>Nosotros</h3>
-            <ul>
-                <il></il>
-                <il></il>
-                <il></il>
-            </ul>
-        </div>
-        <div>
-            <h3>Navegación</h3>
-            <ul>
-                <il></il>
-                <il></il>
-                <il></il>
-            </ul>
-        </div>
-        <div>
-            <h3>Casas a la Venta</h3>
+        <div class="menuF conteiner">
             <div>
-                <img src="./img/casa2.jpg" alt="Imagen Casa 2">
-                <h4>Cassa 2</h4>
-                <p>€2,000,000</p>
+                <h3>Nosotros</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, quas!</p>
             </div>
             <div>
-                <img src="./img/casa3.jpg" alt="Imagen Casa 3">
-                <h4>Cassa 3</h4>
-                <p>€2,000,000</p>
+                <h3>Navegación</h3>
+                <ul>
+                    <il>Nosotros</il>
+                    <il>Casas</il>
+                    <il>Contacto</il>
+                </ul>
             </div>
             <div>
-                <img src="./img/casa4.jpg" alt="Imagen Casa 4">
-                <h4>Cassa 4</h4>
-                <p>€2,000,000</p>
-            </div>
-            <div>
-                <img src="./img/casa5.jpg" alt="Imagen Casa 15">
-                <h4>Cassa 5</h4>
-                <p>€2,000,000</p>
+                <h3>Casas a la Venta</h3>
+                <div>
+                    <img src="./img/casa2.jpg" alt="Imagen Casa 2">
+                    <h4>Cassa 2</h4>
+                    <p>€2,000,000</p>
+                </div>
+                <div>
+                    <img src="./img/casa3.jpg" alt="Imagen Casa 3">
+                    <h4>Cassa 3</h4>
+                    <p>€2,000,000</p>
+                </div>
+                <div>
+                    <img src="./img/casa4.jpg" alt="Imagen Casa 4">
+                    <h4>Cassa 4</h4>
+                    <p>€2,000,000</p>
+                </div>
+                <div>
+                    <img src="./img/casa5.jpg" alt="Imagen Casa 15">
+                    <h4>Cassa 5</h4>
+                    <p>€2,000,000</p>
+                </div>
             </div>
         </div>
-        <div>
-            <p>Derechos Reservadoss Bienes Raices 2026</p>
+        <div class="derechos">
+            <p>Derechos Reservados Bienes Raices 2026</p>
         </div>
 
     </footer>
 
 </body>
+
 </html>
